# herak-raspberry

./: .gitignore  .gitmodules  CHANGELOG  README.md  params_crypt.sh  version.h.in
.github/workflows/: main.yml
app/: params_example.txt
app/boiler/: CMakeLists.txt  boiler.h  cmd_boiler.c  main.c  mqtt_boiler.c  opentherm_cmd.c  opentherm_pio.c  opentherm_web.c
app/common/: CMakeLists.txt  main.c
app/irrig/: CMakeLists.txt  cmd_irrig.c  irrig.h  main.c  mqtt_irrig.c  soil.c  soil_notify.c  ssr.c
app/shaft/: CMakeLists.txt  main.c  mqtt_shaft.c  shaft.h  sonar.c
app/solar/: CMakeLists.txt  bms_daly_bt.c  bms_daly_proto.c  main.c  mppt_voltronic_proto.c  mppt_voltronic_test.c  mppt_voltronic_usb.c  mqtt_solar.c  solar.h  wh_notify.c
include/: base64.h  btstack_config.h  common_lib.h  herak_sys.h  lwipopts.h  one_wire.h
include/usb/: tusb_config.h
libs/common/: CMakeLists.txt  base64.c  bt.c  common_internal.h  lcd.cpp  log.c  mqtt_client.c  system.c  system_weak.c  temperature.cpp  time.c  usb.c  webhook.c  wifi.c
libs/common/api/: common_lib.h
libs/common/api/usb/: tusb_config.h
libs/common/devices/: CMakeLists.txt  README.md  devices_init.c  devices_init.h
libs/common/devices/bms_jk/: CMakeLists.txt  README.md  bms_jk.c  bms_jk.h  bms_jk_api.h  bms_jk_automation.c  bms_jk_mqtt.c
libs/common/devices/common/: CMakeLists.txt  README.md  adc_sensor.c  dev_lib.h
libs/common/devices/flow_yf/: CMakeLists.txt  README.md  flow_yf.c
libs/common/devices/lcd/: CMakeLists.txt  README.md  lcd.cpp  lcd_api.h
libs/common/devices/one_wire/: CMakeLists.txt  README.md  one_wire_api.h  one_wire_sensors.cpp
libs/common/devices/opentherm/: CMakeLists.txt  README.md  opentherm.c  opentherm.h  opentherm_cmd.c  opentherm_dev.c  opentherm_dev.pio  opentherm_mqtt.c  opentherm_pio.c
libs/common/devices/pressure/: CMakeLists.txt  README.md  apress.c
libs/common/devices/rsensor/: CMakeLists.txt  README.md  rsensor.c  rsensor.h
libs/common/devices/sht20/: CMakeLists.txt  README.md  sht20.c  sht20_api.h
libs/common/devices/soil/: CMakeLists.txt  README.md  soil.c
libs/common/devices/sonar/: CMakeLists.txt  README.md  sonar.c
libs/common/devices/ssr/: CMakeLists.txt  README.md  ssr.c  ssr_api.h
libs/common/devices/temperature/: CMakeLists.txt  README.md  temperature.c  temperature_api.h
libs/common/devices/thermostat/: CMakeLists.txt  README.md  thermostat.c
libs/common/services/: CMakeLists.txt  README.md  systems_init.c  systems_init.h
libs/common/services/bt/: CMakeLists.txt  README.md  bt.c  bt_api.h
libs/common/services/cfg_store/: CMakeLists.txt  README.md  cfg_store.c  cfg_store_api.h
libs/common/services/commands/: CMakeLists.txt  README.md  cmd_api.h  commands.c
libs/common/services/fs/: CMakeLists.txt  README.md  fs.c  fs_api.h  fs_internal.h  fs_tftp.c
libs/common/services/json/: CMakeLists.txt
libs/common/services/log/: CMakeLists.txt  README.md  log.c  log_api.h
libs/common/services/mqtt/: CMakeLists.txt  README.md  mqtt_api.h  mqtt_client.c  mqtt_internal.h  mqtt_listen.c  mqtt_publish.c
libs/common/services/ntp/: CMakeLists.txt  README.md  ntp.c  ntp_api.h
libs/common/services/ota/: CMakeLists.txt  README.md  ota.c  ota_check.c  ota_internal.h  ota_update.c
libs/common/services/scripts/: CMakeLists.txt  README.md  ccronexpr.c  ccronexpr.h  scripts.c  scripts_api.h
libs/common/services/sys_state/: CMakeLists.txt  README.md  sys_state.c  sys_state_api.h
libs/common/services/syscmd/: CMakeLists.txt  README.md  syscmd.c  syscmd_api.h
libs/common/services/tftp_client/: CMakeLists.txt  README.md  tftp_api.h  tftp_client.c
libs/common/services/tftp_srv/: CMakeLists.txt  README.md  tftp_srv.c
libs/common/services/usb/: CMakeLists.txt  README.md  usb.c  usb_api.h
libs/common/services/usb/cfg/: tusb_config.h
libs/common/services/webhook/: CMakeLists.txt  README.md  webhook.c  webhook_api.h
libs/common/services/webserver/: CMakeLists.txt  README.md  webserv.c  webserver_api.h
libs/common/services/wifi/: CMakeLists.txt  README.md  wifi.c  wifi_api.h
libs/common/services/wol/: CMakeLists.txt  README.md  wol.c  wol_api.h
libs/common/src/: base64.c  bt.c  common_internal.h  lcd.cpp  log.c  manchester_code.c  mqtt_client.c  sys_irq.c  sys_utils.c  system.c  system_modules.c  system_weak.c  temperature.c  temperature.cpp  time.c  usb.c  webdebug.c  webhook.c  webserv.c  wifi.c
libs/hd44780/: CMakeLists.txt  HD44780_LCD_PCF8574.cpp  HD44780_LCD_PCF8574_Print.cpp
libs/hd44780/api/: HD44780_LCD_PCF8574.hpp
libs/one-wire/: one_wire.cpp
libs/one-wire/test/: pico_pi_mocks.cpp
patches/: 0001-Allow-custom-define-for-FS_SIZE.patch  0001-Implement-auto-discovery-of-required-hardware-resour.patch  0001-LFS-Upgraded-to-upstream-version-2.11-of-littlefs.patch  0001-One-Wire-Silence-debug-prints.patch  0001-Update-app-and-boot-linker-scripts-to-new-SDK-versio.patch  0001-Upgraded-to-upstream-version-2.11-of-littlefs.patch  0002-Add-missing-reset-recovery-delay.patch  0002-Add-rp2350-support-add-support-for-dynamic-flash-siz.patch  0002-LFS-Add-support-for-Pico-multicore.patch  0002-Set-auto-discovery-of-hardware-resources-by-default.patch  0003-Allow-reserving-an-area-at-the-end-of-flash-for-a-fi.patch  0004-Allow-redefine-of-FOTA-compile-time-options.patch  0005-Fix-for-Mbed-TLS-3.x.patch  pio-usb-hw-auto-discovery.patch
scripts/: apply_patches.sh  flash_pico.sh  generate_meta.sh  params_all.txt  params_ci.txt  params_crypt.sh
